fixed overflow

--- a/public/stylesheets/catalogue.css
+++ b/public/stylesheets/catalogue.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     display: flex;
+    overflow: hidden;
 }
 
 #route-catalogue {
